fix z-index

--- a/src/components/Navigation/Navigation.module.scss
+++ b/src/components/Navigation/Navigation.module.scss
@@ -16,7 +16,7 @@
   position: sticky;
   top: 0;
   background-color: white;
-  z-index: 9;
+  z-index: 1;
 }
 
 .link {
